<resources>
    <!-- Login -->
    <string name="app_name">Estação Hack</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign up</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="emptyLogin">Fill the user and password fields !</string>
    <string name="userEmpty">Fill the user field !</string>
    <string name="passwordEmpty">Fill the password field !</string>
    <string name="userLogged">User logged !</string>
    <string name="incorrectUser">User and/or password incorrect!</string>

    <!-- Main -->
    <string name="welcome">Welcome</string>
    <string name="personName">Person name</string>
    <string name="personEmail">Person e-mail</string>
    <string name="personGender">Person gender</string>
    <string name="exit">Exit</string>
    <string name="siteCellep">Site Cellep</string>

    <!-- Cadastro -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
    <array name="gender">
        <item>Select a gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="fillFields">Fill all fields!</string>
    <string name="fillGender">Select one gender!</string>
    <string name="registerSuccess">Registered successfully!</string>

</resources>
