<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txvNome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personName"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txvEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvWelcome" />

    <TextView
        android:id="@+id/txvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txvSexo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNome" />

    <TextView
        android:id="@+id/txvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personGender"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSair"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvEmail" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm100"
        android:layout_marginRight="@dimen/dm100"
        android:text="@string/exit"
        app:layout_constraintBottom_toTopOf="@+id/btnSiteCellep"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvSexo" />

    <Button
        android:id="@+id/btnSiteCellep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm100"
        android:layout_marginRight="@dimen/dm100"
        android:text="@string/siteCellep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSair" />
</androidx.constraintlayout.widget.ConstraintLayout>